ignored system files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 /ECVP2022_poster/results/
 *.asv
+/.idea/.gitignore
+/.idea/FE-Decomposition.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
